添加删除用户表接口
